<resources>
    <string name="app_name" translatable="false">Syncplay</string>
    <string name="ui_track">#%d</string>
    <string name="ui_track_text">#%1$d: %2$s</string>
    <string name="ui_track_title_lang">#%1$d: %2$s (%3$s)</string>
    <string name="pref_video_interpolation_sync_default" translatable="false">audio</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="tab_connect">Connect</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_about">About</string>
    <string name="connect_username_a">Type your username:</string>
    <string name="connect_username_b">Username</string>
    <string name="connect_username_c">A name of your choice</string>
    <string name="connect_roomname_a">Insert room name:</string>
    <string name="connect_roomname_b">Room name</string>
    <string name="connect_roomname_c">Room where you and your friends watch </string>
    <string name="connect_server_a">Select Syncplay server:</string>
    <string name="connect_server_b">Server address</string>
    <string name="connect_server_c">Make sure that you and your friends\njoin the same server.</string>
    <string name="connect_button_join">Join Room</string>
    <string name="connect_button">Join Room</string>
    <string name="connect_button_saveshortcut">Add home shortcut\nfor current config</string>
    <string name="connect_button_switchplayer_exo">Switch player\nExoPlayer (Stable)</string>
    <string name="connect_button_switchplayer_mpv">Switch player\nmpv (Experimental)</string>
    <string name="connect_footnote">Syncplay\'s Unofficial Android Client</string>
    <string name="connect_username_empty_error">Username shouldn\'t be empty</string>
    <string name="connect_roomname_empty_error">Roomname shouldn\'t be empty</string>
    <string name="connect_address_empty_error">Server Address shouldn\'t be empty</string>
    <string name="connect_port_empty_error">Enter port!</string>
    <string name="connect_enter_custom_server">Enter Custom Server</string>
    <string name="connect_custom_server_password">Password (Empty if not required)</string>
    <string name="connect_port">Port</string>
    <string name="connect_nightmodeswitch">Switch the day/night mode.</string>
    <string name="connect_solomode">Enter solo mode (video-player only)</string>
    <string name="room_startup_hint">"Insert a new video from storage by clicking on the button with the following icon "</string>
    <string name="room_selected_vid">Selected video file: %s</string>
    <string name="room_selected_sub">Loaded subtitle file: %s</string>
    <string name="room_selected_sub_error">Invalid subtitle file. Supported formats are: \'SRT\', \'TTML\', \'ASS\', \'SSA\', \'VTT\'</string>
    <string name="room_sub_error_load_vid_first">Load video first</string>
    <string name="room_type_message">Type your message…</string>
    <string name="room_send_button">SEND</string>
    <string name="room_ready">Ready</string>
    <string name="room_details">Show Details</string>
    <string name="room_ping_connected">Connected - PING: %s ms </string>
    <string name="room_ping_disconnected">DISCONNECTED</string>
    <string name="room_overflow_sub">Load Subtitle File…</string>
    <string name="room_overflow_cutout">Cut-out (Notch) Mode</string>
    <string name="room_overflow_ff">Fast Seek Buttons</string>
    <string name="room_overflow_msghistory">Message History</string>
    <string name="room_overflow_settings">Settings</string>
    <string name="room_empty_message_error">Type something!</string>
    <string name="room_attempting_connect">Attempting to connect to %1s:%2s</string>
    <string name="room_connected_to_server">Connected to the server.</string>
    <string name="room_connection_failed">Connecting failed.</string>
    <string name="room_attempting_reconnection">Lost connection to the server.</string>
    <string name="room_guy_played">%s unpaused</string>
    <string name="room_guy_paused">%1s paused at %2s</string>
    <string name="room_seeked">%1s jumped from %2s to %3s</string>
    <string name="room_rewinded">Rewinded due to time difference with %s</string>
    <string name="room_guy_left">%s left the room.</string>
    <string name="room_guy_joined">%s joined the room.</string>
    <string name="room_isplayingfile">%1s is playing \'%2s\' (%3s)</string>
    <string name="room_you_joined_room">You have joined the room: %s</string>
    <string name="room_scaling_fit_screen">Resize Mode: FIT TO SCREEN</string>
    <string name="room_scaling_fixed_width">Resize Mode: FIXED WIDTH</string>
    <string name="room_scaling_fixed_height">Resize Mode: FIXED HEIGHT</string>
    <string name="room_scaling_fill_screen">Resize Mode: FILL SCREEN</string>
    <string name="room_scaling_zoom">Resize Mode: Zoom</string>
    <string name="room_sub_track_changed">Subtitle Track changed to: %s</string>
    <string name="room_audio_track_changed">Audio Track changed to: %s</string>
    <string name="room_audio_track_not_found">No audio found !</string>
    <string name="room_sub_track_disable">Disable Subtitles</string>
    <string name="room_track_track">Track</string>
    <string name="room_sub_track_notfound">No subtitles found !</string>
    <string name="room_details_current_room">Current Room: %s</string>
    <string name="room_details_nofileplayed">(No file being played)</string>
    <string name="room_details_file_properties">Duration: %1s - Size: %2s MBs</string>
    <string name="disconnected_notice_header">DISCONNECTED</string>
    <string name="disconnected_notice_a">You have been disconnected from the server.\nThis may be due to a problem in your internet connection or an issue with the server you\'re connecting to. If the problem persists, change the server.</string>
    <string name="disconnected_notice_b">Attempting to reconnect…</string>
    <string name="room_file_mismatch_warning_core">"Your file is different from %s\'s file in the following ways: "</string>
    <string name="room_file_mismatch_warning_name">"Name. "</string>
    <string name="room_file_mismatch_warning_duration">"Duration. "</string>
    <string name="room_file_mismatch_warning_size">"Size. "</string>
    <string name="room_shared_playlist">Room\'s Shared Playlist</string>
    <string name="room_shared_playlist_brief">Import a file or a directory to include file name(s) into the playlist.\n Click on a file line to get all users to play it.</string>
    <string name="room_shared_playlist_updated">%s updated the playlist</string>
    <string name="room_shared_playlist_changed">%s changed the playlist current selection</string>
    <string name="room_shared_playlist_no_directories">You have not specified any media directories for shared playlists. Manually add the files.</string>
    <string name="room_shared_playlist_not_found">Syncplay couldn\'t find the file that is currently playing in the shared playlist in your media directories.</string>
    <string name="room_shared_playlist_not_featured">This room or server do not have Shared Playlists feature on.</string>
    <string name="room_shared_playlist_button_add_file">Add file(s) to bottom of playlist</string>
    <string name="room_shared_playlist_button_add_folder">Add folder to playlist (and media directories)</string>
    <string name="room_shared_playlist_button_add_url">Add URL(s) to bottom of playlist</string>
    <string name="room_shared_playlist_button_shuffle">Shuffle entire playlist</string>
    <string name="room_shared_playlist_button_shuffle_rest">Shuffle remaining playlist</string>
    <string name="room_shared_playlist_button_overflow">More Shared Playlist settings</string>
    <string name="room_shared_playlist_button_playlist_import">Load playlist from file</string>
    <string name="room_shared_playlist_button_playlist_import_n_shuffle">Load and shuffle playlist from file</string>
    <string name="room_shared_playlist_button_playlist_export">Save playlist to file</string>
    <string name="room_shared_playlist_button_set_media_directories">Set media directories</string>
    <string name="room_shared_playlist_button_set_trusted_domains">Set trusted domains</string>
    <string name="room_shared_playlist_button_undo">Undo last change</string>
    <string name="room_button_desc_aspect_ratio">Aspect Ratio</string>
    <string name="room_button_desc_shared_playlist">Shared Playlist</string>
    <string name="room_button_desc_audio_tracks">Audio Tracks</string>
    <string name="room_button_desc_subtitle_tracks">Subtitle Tracks</string>
    <string name="room_button_desc_rewind">Rewind</string>
    <string name="room_button_desc_toggle">.</string>
    <string name="room_button_desc_play">Play</string>
    <string name="room_button_desc_pause">Pause</string>
    <string name="room_button_desc_ffwd">Fast-forward</string>
    <string name="room_button_desc_add">Add Media File</string>
    <string name="uisetting_timestamp_summary">Disable this to hide the timestamps at the beginning of chat messages.</string>
    <string name="uisetting_timestamp_title">Chat timestamps</string>
    <string name="uisetting_overview_alpha_summary">Default is 40 (Almost transparent), change this if you want to make the room details\' panel more readable by increasing opacity.</string>
    <string name="uisetting_overview_alpha_title">Room Details Background Opacity</string>
    <string name="uisetting_messagery_alpha_summary">Default is 0 (transparent). Maximum is 255 (100% Opaque). Increase readability of the messages by making background more opaque.</string>
    <string name="uisetting_messagery_alpha_title">Messages\' background opacity</string>
    <string name="uisetting_msgsize_summary">Changes message text size. Default is 10.</string>
    <string name="uisetting_msgsize_title">Message font size</string>
    <string name="uisetting_msgcount_summary">Default is 10. Limits the message number count to this value.</string>
    <string name="uisetting_msgcount_title">Message max count</string>
    <string name="uisetting_msglife_summary">When receiving a chat message or room message, it will begin fading out for the amount of time set below.</string>
    <string name="uisetting_msglife_title">Display duration for Chat messages</string>
    <string name="uisetting_timestamp_color_summary">Customize the text color of message timestamps (Default is Pink)</string>
    <string name="uisetting_timestamp_color_title">Timestamp Text Color</string>
    <string name="uisetting_self_color_summary">Customize the text color of your name tag (Default is Dark Red)</string>
    <string name="uisetting_self_color_title">Self Tag Color</string>
    <string name="uisetting_friend_color_summary">Customize the text color of friends\' name tags (Default is Blue)</string>
    <string name="uisetting_friend_color_title">Friend Tag Text Color</string>
    <string name="uisetting_system_color_summary">Customize the text color of system room messages (Default is White)</string>
    <string name="uisetting_system_color_title">System Message Text Color</string>
    <string name="uisetting_human_color_summary">Customize the text color of user messages (Default is White)</string>
    <string name="uisetting_human_color_title">User Message Text Color</string>
    <string name="uisetting_resetdefault_summary">Reset all of the above settings to default.</string>
    <string name="uisetting_resetdefault_title">Reset Default Settings</string>
</resources>