<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="syncplay_ui_settings">
    <CheckBoxPreference
        app:defaultValue="true"
        app:key="ui_timestamp"
        app:summary="@string/uisetting_timestamp_summary"
        app:title="@string/uisetting_timestamp_title" />

    <SeekBarPreference
        android:max="255"
        app:defaultValue="30"
        app:key="overview_alpha"
        app:min="0"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:summary="@string/uisetting_overview_alpha_summary"
        app:title="@string/uisetting_overview_alpha_title"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:max="255"
        app:defaultValue="0"
        app:key="messagery_alpha"
        app:min="0"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:summary="@string/uisetting_messagery_alpha_summary"
        app:title="@string/uisetting_messagery_alpha_title"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:max="48"
        app:defaultValue="11"
        app:key="msg_size"
        app:min="6"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:summary="@string/uisetting_msgsize_summary"
        app:title="@string/uisetting_msgsize_title"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:max="48"
        app:defaultValue="12"
        app:key="msg_count"
        app:min="1"
        app:showSeekBarValue="true"
        app:summary="@string/uisetting_msgcount_summary"
        app:title="@string/uisetting_msgcount_title" />

    <SeekBarPreference
        android:max="30"
        app:defaultValue="3"
        app:key="message_persistance"
        app:min="1"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:summary="@string/uisetting_msglife_summary"
        app:title="@string/uisetting_msglife_title"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:max="60"
        app:defaultValue="18"
        app:key="subtitle_size"
        app:min="8"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:summary="@string/setting_subtitle_size_summary"
        app:title="@string/setting_subtitle_size_title"
        app:useSimpleSummaryProvider="true" />

    <com.chromaticnoob.colorpreference.ColorPreferenceCompat
        android:defaultValue="@color/timestamp_default"
        android:key="timestamp_color"
        android:summary="@string/uisetting_timestamp_color_summary"
        android:title="@string/uisetting_timestamp_color_title" />

    <com.chromaticnoob.colorpreference.ColorPreferenceCompat
        android:defaultValue="@color/selftag_default"
        android:key="selftag_color"
        android:summary="@string/uisetting_self_color_summary"
        android:title="@string/uisetting_self_color_title" />

    <com.chromaticnoob.colorpreference.ColorPreferenceCompat
        android:defaultValue="@color/friendtag_default"
        android:key="friendtag_color"
        android:summary="@string/uisetting_friend_color_summary"
        android:title="@string/uisetting_friend_color_title" />

    <com.chromaticnoob.colorpreference.ColorPreferenceCompat
        android:defaultValue="@color/systemmsg_default"
        android:key="systemtext_color"
        android:summary="@string/uisetting_system_color_summary"
        android:title="@string/uisetting_system_color_title" />

    <com.chromaticnoob.colorpreference.ColorPreferenceCompat
        android:defaultValue="@color/usermsg_default"
        android:key="usertext_color"
        android:summary="@string/uisetting_human_color_summary"
        android:title="@string/uisetting_human_color_title" />

    <Preference
        android:summary="@string/uisetting_resetdefault_summary"
        app:key="ui_resetdefault"
        app:title="@string/uisetting_resetdefault_title" />

</androidx.preference.PreferenceScreen>