<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:keepScreenOn="true"
    android:layoutDirection="ltr"
    tools:context=".room.RoomActivity"
    tools:ignore="ContentDescription, DuplicateSpeakableTextCheck">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/vidplayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:controller_layout_id="@layout/hud"
        app:keep_content_on_player_reset="true"
        app:show_buffering="never"
        app:show_shuffle_button="false" />

    <TextView
        android:id="@+id/syncplay_infoDelegate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:text=""
        android:textAlignment="center"
        android:textColor="#ffffee"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/starter_info_wrapper"
        android:layout_width="0dp"
        android:alpha="0.72"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/starter_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/starter_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/directive4bold"
                android:gravity="center"
                android:text="@string/room_startup_hint"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="3dp"
                app:srcCompat="@drawable/ic_add_video" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>


    <RelativeLayout
        android:id="@+id/syncplay_MESSAGERY"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:focusable="false"
        android:padding="6dp"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.43" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/syncplay_INPUT"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="6dp"
        android:focusable="true"
        android:hint="@string/room_type_message"
        app:layout_constraintEnd_toStartOf="@id/syncplay_SEND"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.40"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/syncplay_INPUT_box"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:imeOptions="flagNoExtractUi"
            android:includeFontPadding="false"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/syncplay_SEND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.7"
        android:fontFamily="@font/directive4bold"
        android:text="@string/room_send_button"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:backgroundTint="#F4D26B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/syncplay_INPUT"
        tools:ignore="HardcodedText" />


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/syncplay_overviewcheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:checked="true"
        android:fontFamily="@font/directive4bold"
        android:text="@string/room_details"
        android:textColor="#BF9E3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/syncplay_SEND" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/syncplay_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:fontFamily="@font/directive4bold"
        android:text="@string/room_ready"
        android:textColor="#BF9E3B"
        app:backgroundTint="@color/sp_shade"
        app:layout_constraintEnd_toStartOf="@id/syncplay_overviewcheckbox"
        app:layout_constraintTop_toBottomOf="@id/syncplay_SEND" />

    <TextView
        android:id="@+id/syncplay_connection_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/directive4bold"
        android:text="@string/room_ping_disconnected"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/syncplay_ready"
        app:layout_constraintEnd_toStartOf="@id/syncplay_signal_icon"
        app:layout_constraintTop_toTopOf="@id/syncplay_ready" />

    <ImageView
        android:id="@+id/syncplay_signal_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/syncplay_ready"
        app:layout_constraintEnd_toStartOf="@id/syncplay_ready"
        app:layout_constraintTop_toTopOf="@id/syncplay_ready"
        app:srcCompat="@drawable/ic_unconnected" />

    <androidx.cardview.widget.CardView
        android:id="@+id/syncplay_overview_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:clickable="false"
        android:focusable="false"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/syncplay_MESSAGERY"
        app:layout_constraintTop_toBottomOf="@id/syncplay_overviewcheckbox">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/syncplay_overview_nester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:padding="4dp">

            <LinearLayout
                android:id="@+id/syncplay_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:gravity="right"
                android:orientation="vertical"
                android:padding="4dp" />

        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/syncplayer_lockoverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/syncplayer_unlock"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="22dp"
        android:alpha="0.35"
        android:clickable="false"
        android:focusable="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_unlocked"
        app:tint="#959595" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/syncplay_visiblitydelegate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="syncplay_INPUT, syncplay_SEND, syncplay_overview_card, syncplay_overviewcheckbox, syncplay_ready, syncplay_connection_info, syncplay_signal_icon" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pseudo_popup_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="16dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/popup_dismisser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:clickable="true"
            android:focusable="true"
            android:src="@color/black" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/pseudo_popup_containercard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.60">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/pseudo_popup_container"
                android:name="com.cosmik.syncplay.room.RoomSettingsFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="HardcodedText" />
        </com.google.android.material.card.MaterialCardView>

        <!--        <Button-->
        <!--            android:id="@+id/popup_button"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="56dp"-->
        <!--            android:fontFamily="@font/directive4bold"-->
        <!--            android:text="@string/uisetting_apply"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            app:layout_constraintRight_toRightOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/pseudo_popup_containercard"-->
        <!--            app:layout_constraintWidth_percent="0.2" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>